# my_ads

./: README.md
api/: README.MD  config.py  dto.py  exceptions.py  pyproject.toml
api/advertisements/: __init__.py
api/advertisements/controller/: advertisement_controller.py  category_controller.py  login_api_controller.py
api/advertisements/domain/: __init__.py  advertisements_domain.py  category_domain.py  users_domain.py
api/advertisements/views/: advertisement_view.py  category_view.py  login_view.py
api/tests/: test_api.py
client/: README.md  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  App.scss
client/src/actions/: Advertisements.js  Login.js
client/src/components/: Login.js  Signup.js
clients/config/: webpack.config.dev.js  webpack.config.prod.js
clients/src/actions/: Signup.js
clients/src/components/: AdvertisementForm.js  Advertisements.js  Navbar.js
clients/src/reducers/: Advertisements.js
database/: README.md  database.env  docker-compose.yml  structure.sql
